# pico-pio-template

./: CMakeLists.txt  myproject.c
myproject_library/: myproject_library.pio
